fix: menu should not appear behind page content

--- a/backend/static/css/main.css
+++ b/backend/static/css/main.css
@@ -130,6 +130,7 @@ h3{
     transform: translate(100%, 0);
 
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    z-index: 99;
 
     margin-top: 0;
     padding-top: 0;
@@ -152,7 +153,7 @@ h3{
 /*
  * And let's slide it in from the left
  */
-#menuToggle input:checked ~ ul{
+#menuToggle input:checked ~ ul {
     transform: none;
 }
 
